--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <a href="https://www.drie.cn/" title="个人主页"><span class="right">https://www.drie.cn/</span></a>
           </td>
           <td><span class="left">博客</span>
-            <a href="https://drie.cn/" title="drie的个人博客"><span class="right">https://blog.drie.cn/</span></a>
+            <a href="https://blog.drie.cn/" title="drie的个人博客"><span class="right">https://blog.drie.cn/</span></a>
           </td>
         </tr>
       </table>
